--- a/index.html
+++ b/index.html
@@ -3,29 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Treinando Web</title>
+    <title>Portifolio</title>
     <link rel="stylesheet" href="index.css">
 </head>
 <body>
-    <div class="container">
-    <nav>
-        <ul class="caixa">
-            <li>
-<a href="Sobrelea.html">Jogo</a>
-            </li>
-            <li>
-                <a href="Eueela.html">versões</a>
-            </li>
-            <li>
-                <a href="index.html">...</a>
-            </li>
-        </ul>
-    </nav>
-    <header>
-        <div class="center">
-            <img src="img/Minecraft-Logo-2011.png">
-        </div>
-    </header>
-</div>
+    
 </body>
 </html>
