--- a/Projetos.html
+++ b/Projetos.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Portifolio</title>
     <link rel="stylesheet" href="index.css">
+    <link rel="icon" type="image/svg" href="img/desktop-computer-svgrepo-com.svg">
 </head>
 <body>
     <div class="container">
